--- a/predictor/templates/index.html
+++ b/predictor/templates/index.html
@@ -44,7 +44,7 @@
                                 <div class="a-a-a">
                                     <h3 class="medium">predict air quality of a city</h3>
                                 </div>
-                                <form id="myForm" class="a-a-a-form a-a-b">
+                                <form id="myForm" class="a-a-a-form a-a-b" action="data/">
                                     {% csrf_token %}
                                     <input type="text" placeholder="search by city name..." class="input">
                                     <button class="submit-form" type="submit">
